{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 548,
  "lineage": "68f99530-4139-4182-403d-b0ebbf9a0731",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-gw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02add6c0527b6455b",
            "domain": "vpc",
            "id": "eipalloc-02add6c0527b6455b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-201-150.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.201.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-099b3d23e336c2e83",
            "arn": "arn:aws:ec2:ap-south-1:404412458375:instance/i-04a5b8d5697a0ad59",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a5b8d5697a0ad59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb2bd43dc684ca08",
            "private_dns": "ip-10-0-2-213.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02433454843aaf68b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0358c984680b17f6c",
            "tags": {
              "Name": "Nginx-Instance"
            },
            "tags_all": {
              "Name": "Nginx-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0743dc14c7fcc50dc"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:internet-gateway/igw-07194eda31a5f33ef",
            "id": "igw-07194eda31a5f33ef",
            "owner_id": "404412458375",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:loadbalancer/app/tf-lb-20231027122832267200000002/62c7954ab26b35df",
            "arn_suffix": "app/tf-lb-20231027122832267200000002/62c7954ab26b35df",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20231027122832267200000002-1649394481.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:loadbalancer/app/tf-lb-20231027122832267200000002/62c7954ab26b35df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20231027122832267200000002",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c94d4d43d445113"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b84b1762770c2df8"
              },
              {
                "subnet_id": "subnet-0f5bc3f1194b5a390"
              }
            ],
            "subnets": [
              "subnet-0b84b1762770c2df8",
              "subnet-0f5bc3f1194b5a390"
            ],
            "tags": {
              "name": "ALB"
            },
            "tags_all": {
              "name": "ALB"
            },
            "vpc_id": "vpc-097c718808307b79a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:listener/app/tf-lb-20231027122832267200000002/62c7954ab26b35df/194aaa4a063ba949",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:targetgroup/lb-tg/917a6dfa40d0b607",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:listener/app/tf-lb-20231027122832267200000002/62c7954ab26b35df/194aaa4a063ba949",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:loadbalancer/app/tf-lb-20231027122832267200000002/62c7954ab26b35df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.lb-sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:targetgroup/lb-tg/917a6dfa40d0b607",
            "arn_suffix": "targetgroup/lb-tg/917a6dfa40d0b607",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:targetgroup/lb-tg/917a6dfa40d0b607",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:targetgroup/lb-tg/917a6dfa40d0b607-20231027143223981200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:404412458375:targetgroup/lb-tg/917a6dfa40d0b607",
            "target_id": "i-04a5b8d5697a0ad59"
          },
          "dependencies": [
            "aws_instance.myec2-1",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02add6c0527b6455b",
            "association_id": "eipassoc-0c095dbeb34ce0b1f",
            "connectivity_type": "public",
            "id": "nat-0251134e668d28223",
            "network_interface_id": "eni-068438cc064f67f7d",
            "private_ip": "10.0.0.247",
            "public_ip": "65.1.201.150",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b84b1762770c2df8",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.NAT-gw-eip",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:route-table/rtb-04f5d8fc71390ebce",
            "id": "rtb-04f5d8fc71390ebce",
            "owner_id": "404412458375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0251134e668d28223",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-097c718808307b79a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-gw-eip",
            "aws_nat_gateway.NAT-gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:route-table/rtb-00aae717a3bb03178",
            "id": "rtb-00aae717a3bb03178",
            "owner_id": "404412458375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07194eda31a5f33ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-097c718808307b79a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4cfaadd41aaf0d3",
            "route_table_id": "rtb-04f5d8fc71390ebce",
            "subnet_id": "subnet-0358c984680b17f6c"
          },
          "dependencies": [
            "aws_eip.NAT-gw-eip",
            "aws_nat_gateway.NAT-gw",
            "aws_route_table.privateRT",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47b1c638186ccc8",
            "route_table_id": "rtb-00aae717a3bb03178",
            "subnet_id": "subnet-0b84b1762770c2df8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicRT",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:security-group/sg-03c94d4d43d445113",
            "description": "Dynamic Ingress Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-03c94d4d43d445113",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "404412458375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097c718808307b79a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:security-group/sg-0743dc14c7fcc50dc",
            "description": "Dynamic Ingress Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0743dc14c7fcc50dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dynamic-sg-1",
            "name_prefix": "",
            "owner_id": "404412458375",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097c718808307b79a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:subnet/subnet-0358c984680b17f6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0358c984680b17f6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404412458375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:subnet/subnet-04c6412293b5ffc5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c6412293b5ffc5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404412458375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet1"
            },
            "tags_all": {
              "Name": "Private Subnet1"
            },
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:subnet/subnet-0b84b1762770c2df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b84b1762770c2df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404412458375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:subnet/subnet-0f5bc3f1194b5a390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5bc3f1194b5a390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404412458375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet1"
            },
            "tags_all": {
              "Name": "Public Subnet1"
            },
            "vpc_id": "vpc-097c718808307b79a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404412458375:vpc/vpc-097c718808307b79a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef39337900e08935",
            "default_route_table_id": "rtb-0c67da2d98f7ece4c",
            "default_security_group_id": "sg-0b13161b2ef5f6442",
            "dhcp_options_id": "dopt-079201375ade80965",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097c718808307b79a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c67da2d98f7ece4c",
            "owner_id": "404412458375",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}